--- a/frontend/templates/frontend/pages/index.html
+++ b/frontend/templates/frontend/pages/index.html
@@ -18,9 +18,14 @@
     <meta name="author" content="Richard Alan Stokes" />
 
     <!-- Webmanifest + Favicon / App icons -->
-    <link rel="manifest" href="/manifest.json" />
-    <link rel="icon" type="image/png" href="" sizes="32x32" />
-    <link rel="apple-touch-icon" href="" />
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'frontend/assets/img/favicon-32x32.png'%}">
+    <link rel="icon" type="image/png" sizes="96x96" href="{% static 'frontend/assets/img/favicon-96x96.png'%}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'frontend/assets/img/favicon-16x16.png'%}">
+    <link rel="icon" type="image/png" sizes="192x192" href="{% static 'frontend/assets/img/favicon-192x192.png'%}">
+    <link rel="icon" type="image/png" sizes="512x512" href="{% static 'frontend/assets/img/favicon-512x512.png'%}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'frontend/assets/img/apple-touch-icon.png'%}">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    {% comment %} <meta name="msapplication-TileImage" content="/mstile-144x144.png"> {% endcomment %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Theme switcher (color modes) -->
