--- a/frontend/templates/frontend/resume/index.html
+++ b/frontend/templates/frontend/resume/index.html
@@ -3,7 +3,7 @@
 {% block main %}
 <style>
     .my-photo {
-        background-image: url("{% static 'frontend/assets/img/people/me2.jpg' %}");
+        background-image: url("{% static 'frontend/assets/img/people/me.jpg' %}");
         background-position: center !important;
         background-size: 90%;
         background-repeat: repeat-x;
@@ -108,7 +108,7 @@
 <section class="desktop">
   <div class="d-lg-flex position-relative h-90 min-vh-100">
     <!-- Cover image-->
-    <div class="bg-size-cover bg-repeat-0 bg-position-center polygon-shape position-relative home-hero-image my-photo" style=""></div>
+    <div class="bg-size-cover bg-repeat-0 bg-position-center polygon-shape position-relative my-photo" style=""></div>
     <!-- Sign up form-->
     <div class="hp-hero-right d-flex align-items-center w-lg-50 min-vh-100 h-100 px-3 px-lg-5 pt-5">
       <div class="w-100 pt-0 mx-auto" style="max-width: 763px;">
