--- a/frontend/templates/frontend/resume/index.html
+++ b/frontend/templates/frontend/resume/index.html
@@ -3,7 +3,7 @@
 {% block main %}
 <style>
     .my-photo {
-        background-image: url("{% static 'frontend/assets/img/people/me.jpg' %}");
+        background-image: url("https://drive.google.com/file/d/1r3b-vBLSrn8eKM14oGH2qsaMpL00I3VB/view?usp=drive_link");
         background-position: center !important;
         background-size: 90%;
         background-repeat: repeat-x;
