--- a/frontend/templates/frontend/resume/_base.html
+++ b/frontend/templates/frontend/resume/_base.html
@@ -6,9 +6,7 @@
     {% block site_title%}
     {% endblock site_title%}
     <meta name="robots" content="index, follow" />
-    <meta
-      name="description"
-      content=""/>
+
     <meta name="keywords" content="fortune 500, fortune500, fortune+500, visual+embassy, visualembassy, software, tech, visual embassy, visual, embassy, software developers" />
     <meta name="author" content="Visual Embassy, Inc" />
     <!-- Viewport-->
@@ -19,35 +17,37 @@
       integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp"
       crossorigin="anonymous"
     />
-    <link data-rh="true" rel="canonical" href="https://visualembassy.org">
+    <link data-rh="true" rel="canonical" href="https://rick.visualembassy.org">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
-    <!-- Favicon and Touch Icons-->
-    {% comment %} <link rel="apple-touch-icon" sizes="180x180" href="{% static 'frontend/favicon/favicon-32x32.png' %}" />
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'frontend/favicon/favicon-32x32.png' %}" />
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'frontend/favicon/favicon-32x32.png' %}" /> {% endcomment %}
+
+        <!-- Webmanifest + Favicon / App icons -->
+        <link rel="icon" type="image/png" sizes="32x32" href="{% static 'frontend/assets/img/favicon-32x32.png'%}">
+        <link rel="icon" type="image/png" sizes="96x96" href="{% static 'frontend/assets/img/favicon-96x96.png'%}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{% static 'frontend/assets/img/favicon-16x16.png'%}">
+        <link rel="icon" type="image/png" sizes="192x192" href="{% static 'frontend/assets/img/favicon-192x192.png'%}">
+        <link rel="icon" type="image/png" sizes="512x512" href="{% static 'frontend/assets/img/favicon-512x512.png'%}">
+        <link rel="apple-touch-icon" sizes="180x180" href="{% static 'frontend/assets/img/apple-touch-icon.png'%}">
     
     <meta data-rh="true" property="og:title" content="Visual Embassy">
-    <meta data-rh="true" property="og:description" content="Magical Software">
+    <meta data-rh="true" property="og:description" content="Magical Software by Visual Embassy">
     <meta data-rh="true" property="og:type" content="website">
     <meta data-rh="true" property="og:site_name" content="Visual Embassy">
-    <meta data-rh="true" property="og:url" content="https://visualembassy.org">
+    <meta data-rh="true" property="og:url" content="https://rick.visualembassy.org">
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Visual Embassy: We build you software that's magical">
     <meta name="twitter:description" content="" />
-
+    <link rel="stylesheet" type="text/css" href="{% static 'frontend/assets/css/custom/resume.rick.css' %}" media="all" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    <link rel="manifest" href="{% static 'frontend/favicon/site.webmanifest' %}" />
-    <link rel="mask-icon" color="#6366f1" href="/favicon/safari-pinned-tab.svg" />
+    <link rel="manifest" href="{% static 'frontend/assets/img/site.webmanifest' %}" />
+    {% comment %} <link rel="mask-icon" color="#6366f1" href="/favicon/safari-pinned-tab.svg" /> {% endcomment %}
     <link rel="stylesheet" media="screen" href="{% static 'frontend/vendor/aos/dist/aos.css'%}" />
     <link rel="stylesheet" media="screen" href="{%static 'frontend/vendor/lightgallery/css/lightgallery-bundle.min.css'%}" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" media="all" href="{% static 'frontend/assets/css/custom/resume.rick.css' %}" />
-
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.4/dist/bootstrap-table.min.js"></script>
     <script src="https://unpkg.com/bootstrap-table@1.21.4/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
     <style>
@@ -55,8 +55,8 @@
         font-family: 'Public Sans', sans-serif;
       }
     </style>
-    <link rel="stylesheet" media="screen" href="{% static 'frontend/vendor/swiper/swiper-bundle.min.css' %}" />
-    <link rel="stylesheet" media="screen" href="{% static 'frontend/css/theme.min.css' %}" />
+    {% comment %} <link rel="stylesheet" media="screen" href="{% static 'frontend/vendor/swiper/swiper-bundle.min.css' %}" /> {% endcomment %}
+    <link rel="stylesheet" media="screen" href="{% static 'frontend/assets/css/theme.min.css' %}" />
     <!--JSON-LD-->
 
 
